@@ -36140,6 +36140,16 @@ test clock-52.3 {correct conversion of times in Russia} {
    set result
 } {01:59:59 03:00:00 02:59:59 02:00:00}
 
+test clock-52.4 {correct conversion of times in USA} {
+   # [Bug 2207436]
+   set result {}
+   foreach t [list 1268549999 1268550000 1257055199 1257055200] {
+       lappend result [clock format $t -format %H:%M:%S \
+                           -timezone EST5EDT]
+   }
+   set result
+} {01:59:59 03:00:00 01:59:59 01:00:00}
+
 # Regression test for Bug # 1505383
 
 test clock-53.1 {%EC %Ey} {
@@ -36721,6 +36731,19 @@ test clock-65.1 {clock add, bad option [Bug 2481670]} {*}{
     -match glob
     -returnCodes error
     -result {bad switch "-foo"*}
+}
+
+test clock-66.1 {clock scan, no date, never-before-seen timezone} {*}{
+    -setup {
+	::tcl::clock::ClearCaches
+    }
+    -body {
+	clock scan 1200 \
+	    -timezone {<EST>+05:00:00<EDT>+04:00:00,M3.2.0/02:00:00,M11.1.0/02:00:00} \
+	    -base 1256529600 \
+	    -format %H%M
+    }
+    -result 1256572800
 }
 
 # cleanup
